# toxic-comment-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
.history/data/: README_20260505153414.md  README_20260505162422.md
api/: README.md
configs/: config.yaml
configs/data/: jigsaw.yaml
configs/features/: tfidf.yaml
configs/model/: logreg.yaml
configs/training/: default.yaml
data/: raw.dvc
dockerfiles/: Dockerfile  README.md
docs/: api.md  getting_started.md  index.md  mkdocs.yml
notebooks/: README.md
reports/: baseline_metrics.json
reports/experiments/: experiment_results.csv  experiment_results.json
reports/profiling/: training_cpu_profile.prof  training_cpu_profile.txt  training_memory_profile.txt
scripts/: docker_smoke.py  plot_experiment_results.py  profile_memory.py  profile_training.py  run_mlflow_experiments.py
src/toxic_comment_classifier/: __init__.py  logging_config.py  predict_model.py  train_model.py
src/toxic_comment_classifier/data/: __init__.py  loaders.py  make_dataset.py
src/toxic_comment_classifier/evaluation/: __init__.py
src/toxic_comment_classifier/features/: __init__.py  build_features.py
src/toxic_comment_classifier/models/: __init__.py  model.py
src/toxic_comment_classifier/utils/: __init__.py
src/toxic_comment_classifier/visualization/: __init__.py  visualize.py
tests/: test_data.py  test_model.py
