[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxic_comment_classifier"
version = "0.1.0"
description = "A multilabel toxic comment classifier using DistilBERT and HuggingFace Transformers with full MLOps pipeline including experiment tracking, CI/CD, Docker, and FastAPI deployment"
authors = [
    {name = "team_toxic", email = "apate424@depaul.edu"}
]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "torch>=2.3.0",
    "mlflow>=2.16.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "dvc>=3.55.0",
    "transformers>=4.40.0",
    "datasets>=2.20.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["N803"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["src"]
